--- a/src/artist_Page.html
+++ b/src/artist_Page.html
@@ -131,7 +131,6 @@
               <div class="hover_link font-weight-bold ml-3">Install App</div>
             </div>
 
-
           </div>
 
         </aside>
@@ -326,6 +325,7 @@
   </div>
   <!-- End of Player-->
   <script src="./app.js"></script>
+  <script src="/src/artistPage.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
