--- a/src/artist_Page.html
+++ b/src/artist_Page.html
@@ -171,8 +171,8 @@
       <!-- */*/*/*/*/*/*/*/*  Artist Page */*/*/*/*/*/*/*/*/*/*/* -->
       <div class="col-lg-10 col-md-10" style="width: 100%;">
         <!-- Jumbotron -->
-        <div class="container-fluid"
-          style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../assets/artistpage/jumbotron.jpg'); background-position: center;background-repeat: no-repeat; height: 50vh;">
+        <div id="jumbotron" class="container-fluid"
+          style="background-repeat: no-repeat; object-fit:cover; width: 100%; background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)),; background-position: center;background-repeat: no-repeat; height: 50vh;">
           <div class="row d-flex justify-content-between pt-3 h-100">
             <div class="col-lg-9">
               <div class="d-flex justify-content-between pb-5" style="width: 8%;">
@@ -183,7 +183,7 @@
               </div>
               <div class="pt-5 position-absolute" style="bottom: 0px;">
                 <p class="text-white"><img style="width: 1em;" src="../assets/logo/verify.png"> Verified artist</p>
-                <h1 class="text-white" style="font-size: 4rem;font-weight: 700;">Queen</h1>
+                <h1  class="text-white" style="font-size: 4rem;font-weight: 700;" onclick=""> Queen</h1>
                 <small class="text-white font-weight-bold">37 254 400 monthly listeners</small>
               </div>
             </div>
