--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -45,7 +45,7 @@
                                 <div class="  font-weight-bold ml-3"><a href="home_Page.html"
                                         style="text-decoration: none;">Home</a></div>
                             </div>
-                            <div class=" d-flex align-items-center mt-1 mx-1  hover_link">
+                            <div id="nav-search" class=" d-flex align-items-center mt-1 mx-1  hover_link">
                                 <i class="bi bi-search" style="font-size: 1.0rem;"></i>
                                 <div class="  font-weight-bold ml-3">Search</div>
                             </div>
@@ -386,101 +386,15 @@
                                 <h6 class="mt-5 align-self-end pb-2">SEE ALL</h6>
                             </div>
 
-                            <div class="custom-row">
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img9.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img10.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img11.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img21.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/IMG13.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img14.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img.15.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="column">
-                                    <div class="card p-2">
-                                        <img src="../assets/homepage/img16.jpg" class="card-img-top" alt="cover album">
-                                        <div class="card-body p-0 my-1">
-                                            <h5 class="card-title"> <b>Album Title</b> </h5>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="custom-row card-container">
+                                
                             </div>
                         </div>
                     </section>
                     <!-- END of Shows to try  -->
                 </div>
 
-
+                <a href='album_Page.html?id='>Hello</a>
                 <!-- Shows to try  -->
                 <section id="shows-to-try">
                     <div class="container-fluid">
@@ -648,5 +562,5 @@
 
 
 </body>
-
+    <script src="./fetchhome.js"></script>
 </html>
